--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -29,6 +29,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install Markdown
+        pip install beautifulsoup4
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install build
     - name: Build package
